New color theme, fixed spacing issues, Model_1.2

--- a/android/app/src/main/res/layout/activity_splash_screen.xml
+++ b/android/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,16 +7,31 @@
     tools:context=".SplashScreen">
 
     <ImageView
+        android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/greenbackground">
-    </ImageView>
+        app:srcCompat="@drawable/whitebackground"></ImageView>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="centerInside"
-        app:srcCompat="@drawable/foragesnap"></ImageView>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="285dp"
+            android:layout_height="241dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.489"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.334"
+            app:srcCompat="@drawable/justforagesnapfinallogo" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
