--- a/android/app/src/main/res/layout/activity_camera.xml
+++ b/android/app/src/main/res/layout/activity_camera.xml
@@ -38,12 +38,30 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
-            android:id="@+id/foragesnapbanner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/transparentbanner"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:contentDescription="@string/app_name"
             android:scaleType="fitStart"
-            app:srcCompat="@drawable/foragesnapname" />
+            app:srcCompat="@color/semi_transparent" />
+
+        <ImageView
+            android:id="@+id/leaves"
+            android:layout_width="33dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="7dp"
+            app:srcCompat="@drawable/justleaves" />
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="92dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="47dp"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/pacifico"
+            android:text="@string/app_name"
+            android:textColor="@android:color/white" />
 
     </RelativeLayout>
 
