--- a/android/app/src/main/res/layout/activity_camera.xml
+++ b/android/app/src/main/res/layout/activity_camera.xml
@@ -47,11 +47,11 @@
 
         <ImageView
             android:id="@+id/leaves"
-            android:layout_width="33dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="7dp"
-            app:srcCompat="@drawable/justleaves" />
+            android:layout_width="39dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="9dp"
+            app:srcCompat="@drawable/illegaljustleaves" />
 
         <TextView
             android:id="@+id/name"
