--- a/android/app/src/main/res/layout/activity_splash_screen.xml
+++ b/android/app/src/main/res/layout/activity_splash_screen.xml
@@ -19,8 +19,8 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="285dp"
-            android:layout_height="241dp"
+            android:layout_width="325dp"
+            android:layout_height="302dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -31,7 +31,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.334"
-            app:srcCompat="@drawable/justforagesnapfinallogo" />
+            app:srcCompat="@drawable/legallogo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
